care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Secure_Dementia_Program_Needed__c.field-meta.xml
<CustomField>
    <fullName>Secure_Dementia_Program_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secure Dementia Program Needed?</label>
    <type>Checkbox</type>
</CustomField>