care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Services_Needed__c.field-meta.xml
<CustomField>
    <fullName>Services_Needed__c</fullName>
    <label>Services Needed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>