care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Sexual_Abuse_Coverage_Required__c.field-meta.xml
<CustomField>
    <fullName>Sexual_Abuse_Coverage_Required__c</fullName>
    <label>Sexual Abuse Coverage Required?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>yes</fullName>
            </value>
            <value>
                <fullName>no</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>