care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Smoking__c.field-meta.xml
<CustomField>
    <fullName>Smoking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Smoking?</label>
    <type>Checkbox</type>
</CustomField>