care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Summary_of_Care_Recipient_Needs__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Care_Recipient_Needs__c</fullName>
    <label>Summary of Care Recipient Needs</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>