care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Time_frame_for_move__c.field-meta.xml
<CustomField>
    <fullName>Time_frame_for_move__c</fullName>
    <label>Time frame for move</label>
    <length>100</length>
    <type>Text</type>
</CustomField>