care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Time_spent_week_caring_for_recipient__c.field-meta.xml
<CustomField>
    <fullName>Time_spent_week_caring_for_recipient__c</fullName>
    <label>Time spent /week caring for recipient?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-5 hr</fullName>
            </value>
            <value>
                <fullName>5-10 hrs</fullName>
            </value>
            <value>
                <fullName>10-15 hrs</fullName>
            </value>
            <value>
                <fullName>15-20 hrs</fullName>
            </value>
            <value>
                <fullName>20+ hrs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>