care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Timeframe_Needed_to_Resolve_this__c.field-meta.xml
<CustomField>
    <fullName>Timeframe_Needed_to_Resolve_this__c</fullName>
    <label>Timeframe Needed to Resolve this?</label>
    <type>TextArea</type>
</CustomField>