care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Total_PS_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Total_PS_Time_Spent__c</fullName>
    <label>Total PS Time Spent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>:15</fullName>
            </value>
            <value>
                <fullName>:30</fullName>
            </value>
            <value>
                <fullName>:45</fullName>
            </value>
            <value>
                <fullName>1:00</fullName>
            </value>
            <value>
                <fullName>1:15</fullName>
            </value>
            <value>
                <fullName>1:30</fullName>
            </value>
            <value>
                <fullName>1:45</fullName>
            </value>
            <value>
                <fullName>2:00</fullName>
            </value>
            <value>
                <fullName>2:15</fullName>
            </value>
            <value>
                <fullName>2:30</fullName>
            </value>
            <value>
                <fullName>2:45</fullName>
            </value>
            <value>
                <fullName>3:00</fullName>
            </value>
            <value>
                <fullName>3:15</fullName>
            </value>
            <value>
                <fullName>3:30</fullName>
            </value>
            <value>
                <fullName>3:45</fullName>
            </value>
            <value>
                <fullName>4:00</fullName>
            </value>
            <value>
                <fullName>4:15</fullName>
            </value>
            <value>
                <fullName>4:30</fullName>
            </value>
            <value>
                <fullName>4:45</fullName>
            </value>
            <value>
                <fullName>5:00</fullName>
            </value>
            <value>
                <fullName>5:15</fullName>
            </value>
            <value>
                <fullName>5:30</fullName>
            </value>
            <value>
                <fullName>5:45</fullName>
            </value>
            <value>
                <fullName>6:00</fullName>
            </value>
            <value>
                <fullName>6:15</fullName>
            </value>
            <value>
                <fullName>6:30</fullName>
            </value>
            <value>
                <fullName>6:45</fullName>
            </value>
            <value>
                <fullName>7:00</fullName>
            </value>
            <value>
                <fullName>7:15</fullName>
            </value>
            <value>
                <fullName>7:30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>