care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Transportation_needed__c.field-meta.xml
<CustomField>
    <fullName>Transportation_needed__c</fullName>
    <label>Transportation needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>One-way</fullName>
            </value>
            <value>
                <fullName>Round-trip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>