care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Type_of_Care_Needed__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Care_Needed__c</fullName>
    <label>Type of Care Needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adult Day Program</fullName>
            </value>
            <value>
                <fullName>Aging Life Care Manager</fullName>
            </value>
            <value>
                <fullName>Assisted Living Community</fullName>
            </value>
            <value>
                <fullName>Associations</fullName>
            </value>
            <value>
                <fullName>Cont. Care Retirement Community</fullName>
            </value>
            <value>
                <fullName>Daily Money Manager</fullName>
            </value>
            <value>
                <fullName>Durable Medical Supplies</fullName>
            </value>
            <value>
                <fullName>Elder Law Attorney</fullName>
            </value>
            <value>
                <fullName>Emergency Response System</fullName>
            </value>
            <value>
                <fullName>Financial Assistance</fullName>
            </value>
            <value>
                <fullName>Funeral Services</fullName>
            </value>
            <value>
                <fullName>Home Health Care</fullName>
            </value>
            <value>
                <fullName>Home Modification</fullName>
            </value>
            <value>
                <fullName>Hospice</fullName>
            </value>
            <value>
                <fullName>Independent Living</fullName>
            </value>
            <value>
                <fullName>In-Patient Rehab</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Meals on Wheels/Food Service</fullName>
            </value>
            <value>
                <fullName>Medical Providers</fullName>
            </value>
            <value>
                <fullName>Medical Services/DME</fullName>
            </value>
            <value>
                <fullName>Non-Medical Home Care</fullName>
            </value>
            <value>
                <fullName>Nursing Home</fullName>
            </value>
            <value>
                <fullName>Nutrition Program</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Senior Center</fullName>
            </value>
            <value>
                <fullName>Senior Move Manager</fullName>
            </value>
            <value>
                <fullName>Senior Moving Services</fullName>
            </value>
            <value>
                <fullName>State/County Agencies</fullName>
            </value>
            <value>
                <fullName>Subsidized Housing</fullName>
            </value>
            <value>
                <fullName>Support Groups</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>