care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Vetting_Type__c.field-meta.xml
<CustomField>
    <fullName>Vetting_Type__c</fullName>
    <defaultValue>&apos;No Vetting&apos;</defaultValue>
    <label>Vetting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preliminary Vetting</fullName>
            </value>
            <value>
                <fullName>Full Credential</fullName>
            </value>
            <value>
                <fullName>No Vetting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>