care/force-app/main/default/objects/Action_Plan_Needs__c/fields/What_are_recipient_s_perceptions_wishes__c.field-meta.xml
<CustomField>
    <fullName>What_are_recipient_s_perceptions_wishes__c</fullName>
    <label>What are recipient’s perceptions/wishes?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>