care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Wheelchair_dependent__c.field-meta.xml
<CustomField>
    <fullName>Wheelchair_dependent__c</fullName>
    <label>Wheelchair dependent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Able to self-propel</fullName>
            </value>
            <value>
                <fullName>Unable to self-propel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>