care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Will_caregiver_be_home__c.field-meta.xml
<CustomField>
    <fullName>Will_caregiver_be_home__c</fullName>
    <label>Will caregiver be home?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>