care/force-app/main/default/objects/Action_Plan_Needs__c/fields/Willing_To_Wait_for_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Willing_To_Wait_for_Appointment__c</fullName>
    <description>SFORCE-2796
Create new Action Plan Need record type for Senior Care Planning &quot;Care Tasks&quot;</description>
    <inlineHelpText>Provide details about how long care recipient is willing to wait for an appointment</inlineHelpText>
    <label>Willing To Wait for Appointment?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>