care/force-app/main/default/objects/Action_Plan_Needs__c/recordTypes/ABUC_Non_Medical_Home_Care.recordType-meta.xml
<RecordType>
    <fullName>ABUC_Non_Medical_Home_Care</fullName>
    <active>true</active>
    <label>ABUC - Non-Medical Home Care</label>
</RecordType>