care/force-app/main/default/objects/Action_Plan_Needs__c/recordTypes/Adult_Day_Program.recordType-meta.xml
<RecordType>
    <fullName>Adult_Day_Program</fullName>
    <active>true</active>
    <label>Adult Day Program</label>
</RecordType>