care/force-app/main/default/objects/Action_Plan_Needs__c/recordTypes/Assisted_Living.recordType-meta.xml
<RecordType>
    <fullName>Assisted_Living</fullName>
    <active>true</active>
    <label>Assisted Living</label>
</RecordType>