care/force-app/main/default/objects/Action_Plan_Needs__c/recordTypes/Daily_Money_Manager.recordType-meta.xml
<RecordType>
    <fullName>Daily_Money_Manager</fullName>
    <active>true</active>
    <description>Developed as part of the ticket Sforce-2530 for Senior care Companies</description>
    <label>Daily Money Manager</label>
</RecordType>