care/force-app/main/default/objects/Action_Plan_Needs__c/recordTypes/Elder_Law.recordType-meta.xml
<RecordType>
    <fullName>Elder_Law</fullName>
    <active>true</active>
    <label>Elder Law</label>
</RecordType>