care/force-app/main/default/objects/Action_Plan_Needs__c/recordTypes/Geriatric_Care_Manager.recordType-meta.xml
<RecordType>
    <fullName>Geriatric_Care_Manager</fullName>
    <active>true</active>
    <label>Aging Life Care Manager</label>
</RecordType>