care/force-app/main/default/objects/Action_Plan_Needs__c/recordTypes/Home_Modifications.recordType-meta.xml
<RecordType>
    <fullName>Home_Modifications</fullName>
    <active>true</active>
    <label>Home Modifications</label>
</RecordType>