care/force-app/main/default/objects/Action_Plan_Needs__c/recordTypes/In_Home_Skilled_Care.recordType-meta.xml
<RecordType>
    <fullName>In_Home_Skilled_Care</fullName>
    <active>true</active>
    <label>In Home Skilled Care</label>
</RecordType>