care/force-app/main/default/objects/Action_Plan_Needs__c/recordTypes/Non_Medical_Home_Care.recordType-meta.xml
<RecordType>
    <fullName>Non_Medical_Home_Care</fullName>
    <active>true</active>
    <label>Non-Medical Home Care</label>
</RecordType>