care/force-app/main/default/objects/Action_Plan_Needs__c/recordTypes/Nursing_Home.recordType-meta.xml
<RecordType>
    <fullName>Nursing_Home</fullName>
    <active>true</active>
    <label>Nursing Home</label>
</RecordType>