care/force-app/main/default/objects/Action_Plan_Needs__c/recordTypes/Senior_Move_Managers.recordType-meta.xml
<RecordType>
    <fullName>Senior_Move_Managers</fullName>
    <active>true</active>
    <label>Senior Move Managers</label>
</RecordType>