care/force-app/main/default/objects/Action_Plan_Needs__c/recordTypes/State_Record_Data_Entry.recordType-meta.xml
<RecordType>
    <fullName>State_Record_Data_Entry</fullName>
    <active>true</active>
    <label>State Record Data Entry</label>
</RecordType>