care/force-app/main/default/objects/Action_Plan_Needs__c/recordTypes/Support_Groups.recordType-meta.xml
<RecordType>
    <fullName>Support_Groups</fullName>
    <active>true</active>
    <label>Support Groups</label>
</RecordType>