care/force-app/main/default/objects/Action_Plan_Needs__c/recordTypes/Task_Management_Request.recordType-meta.xml
<RecordType>
    <fullName>Task_Management_Request</fullName>
    <active>true</active>
    <description>SFORCE-2796 Create new Action Plan Need record type for Senior Care Planning &quot;Care Tasks&quot;</description>
    <label>Task Management Request</label>
</RecordType>