care/force-app/main/default/objects/Action_Plan_Needs__c/recordTypes/Transportation.recordType-meta.xml
<RecordType>
    <fullName>Transportation</fullName>
    <active>true</active>
    <label>Transportation</label>
</RecordType>