care/force-app/main/default/objects/Action_Plan_Needs__c/validationRules/Vetting_type_needs_to_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Vetting_type_needs_to_Selected</fullName>
    <active>false</active>
    <errorConditionFormula>AND($Setup.Override_Validation_Rules__c.Override_ActionPlanNeed_Validation__c = False)</errorConditionFormula>
    <errorMessage>&quot;Vetting type needs to be selected before saving&quot;</errorMessage>
</ValidationRule>