care/force-app/main/default/objects/Action_Plan_Needs__c/listViews/ABUC.listView-meta.xml
<ListView>
    <fullName>ABUC</fullName>
    <columns>NAME</columns>
    <columns>Account_name__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>,Action_Plan_Needs__c.ABUC_Non_Medical_Home_Care,Action_Plan_Needs__c.Non_Medical_Home_Care</value>
    </filters>
    <label>ABUC</label>
    <language>en_US</language>
    <sharedTo>
        <group>Senior_Care</group>
        <group>Share_Senior_Care</group>
    </sharedTo>
</ListView>