care/force-app/main/default/objects/Action_Plan_Needs__c/listViews/All_Open_APs.listView-meta.xml
<ListView>
    <fullName>All_Open_APs</fullName>
    <columns>NAME</columns>
    <columns>Action_Plan_Created_date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Pending</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>notContain</operation>
        <value>ctobi</value>
    </filters>
    <label>All Open APs</label>
    <language>en_US</language>
    <sharedTo>
        <group>Senior_Care</group>
    </sharedTo>
</ListView>